Set trade selector and chat input size to 16px to prevent zoom on iOS
Anything less than 16px will cause iOS to zoom in on a form field

--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -19,3 +19,9 @@
   padding-left: var(--size-30);
   padding-right: var(--size-30);
 }
+
+.container [data-paste-element="INPUT_ELEMENT"],
+.containerOpen [data-paste-element="INPUT_ELEMENT"] {
+  /* Prevent browser from automatically zooming in on input element focus */
+  font-size: 16px;
+}
